--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">badgerparking</string>
     <string name="rss_url">https://media.cityofmadison.com/Mediasite/FileServer/Podcast/ce9107f7b34a47fa82393d9881c83d8817/feed.xml</string>
+    <string name="remind_noti_channel_id">channel_reminders</string>
 </resources>
